--- a/pom.xml
+++ b/pom.xml
@@ -37,4 +37,13 @@
         <version>3.141.59</version>
     </dependency>   
   </dependencies>
+  <build>
+    <plugins>
+       <plugin>
+         <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-surefire-plugin</artifactId>
+    <version>3.0.0-M4</version>
+      <plugin/>
+      <plugins/>
+    <build/>
 </project>
